Tue Jul  8 18:29:56 2003  Joern Thyssen  <jth@gnubg.org>

	* text.c (OutputRolloutContext): display later evals.
	(bug #4229, reported by Ian Dunstan)

Tue Jul 8 11:15 GMT 2003 Jim Segrave jes@jes-2.demon.nl

	* rollout.c - initialise internal variables on first game of
	  rollout
	
Mon Jul  7 12:33:17 2003  Joern Thyssen  <jth@gnubg.org>

	* rollout.c (RolloutDice): fix bug in generated dice for
	rollout as initial position.

Sun Jul  6 18:01:08 2003  Joern Thyssen  <jth@gnubg.org>

	* openurl.c (OpenURL): commit old fix.

Sun Jul 6 15:02 GMT 2003 Jim Segrave jes@jes-2.demon.nl

	* rolloutc it helps to call fabs() when dealing with floats.
	  sigh - complete brain fade
	
Sun Jul  6 14:33:42 2003  Joern Thyssen  <jth@gnubg.org>

	* eval.c (EvalKey): do not include cubeful flags, match scores, etc.
	in calculation of hash key for 0-ply evaluations unless called 
	from EvaluatePositionCubeful.

Sun Jul  6 13:48:46 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (StatcontextGetSelection): order lines before copying.
	(bug #4160 reported by Holger Bochnig)

Sat Jul  5 20:53:42 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* gnubg.c: replace 'const' with ICONV_CONST to get rid of compiler
	warning.

Thu Jul 3 15:02 GMT 2003 Jim Segrave jes@jes-2.demon.nl

	* openurl.c gtktheory.c gtkboard.c osr.c eval.c gnubg.c
	  htmlimages.c export.c lib/event.c
	  fixes for compiler warnings - unused variables removed, 
	  cast added in gnubg.c, config.h included in event.c (and
	  fix of call to outputerr()), add explicit returns in eval.c
	  for reaching end of non-void function

Fri Jun 27 21:20 GMT 2003 Jim Segrave jes@jes-2.demon.nl

	* rollout.c - fix results after interupted rollouts

Fri Jun 27 22:15:52 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktheory.c: use clist widget for double, take, etc. points.

Fri Jun 27 20:42:14 2003  Joern Thyssen  <jth@gnubg.org>

	* rollout.c (BasicCubefulRollout): fix bug in variance reduction
	when rolling out as initial position.